--- a/app/views/admin/content/new.html.erb
+++ b/app/views/admin/content/new.html.erb
@@ -3,14 +3,15 @@
 <%= render "admin/shared/edit", { :form_type => "article", :form_action => { :action => "new", :id => @article.id , :class => ('autosave')} } %>
 
 <div class = ''>
-
+  <% if current_user.admin? %>
     <%= form_tag({controller: "admin/content", action: "merge_with"}, method: "put") do %>
-      <h3>You can associate the following resources</h3>
-      <h3 class='separator'>Merge articles</h3>
-      <%=label_tag(:merge_with, "Article ID ") %>
-      <%=hidden_field_tag "article_id", @article.id %>
-      <%=text_field_tag(:merge_with) %>
-      <%=submit_tag("Merge") %>
+    <h3>You can associate the following resources</h3>
+    <h3 class='separator'>Merge Articles</h3>
+    <%=label_tag(:merge_with, "Article ID ") %>
+    <%=hidden_field_tag "article_id", @article.id %>
+    <%=text_field_tag(:merge_with) %>
+    <%=submit_tag("Merge") %>
     <% end %>
+  <% end %>
 
 </div>
